changed app img to input types, added pointer to button

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -39,8 +39,8 @@
           </p>
         </div>
         <div class="apps">
-          <img src="./images/badge-iphone.png" alt="Download on the App Store">
-          <img src="./images/badge-android.png" alt="Get it on Google Play">
+          <input type="image" alt="Download on the App Store" src="./images/badge-iphone.png">
+          <input type="image" src="./images/badge-android.png" alt="Get it on Google Play">
         </div>
       </div>
     </div>
