removed unecessary class instagram-all

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <section id="instagram-all">
+  <section>
     <div class="container">
       <div class="phone"><img src="./images/phones.png"></div>
       <div class="login-content-apps">
