--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <section id="index">
+    <div id="image">
+      <img src="/Users/juliaramos/code/labs/week2/lab-css-instagram-clone/starter-code/images/phones.png" alt="iphone">
+    </div>
+    <div id="main">
+      <div id="header">
+        <div>
+          <img src="/Users/juliaramos/code/labs/week2/lab-css-instagram-clone/starter-code/images/brand.png" alt="instagram-logo">
+        </div>
+        <button id="login">
+          <img src="/Users/juliaramos/code/labs/week2/lab-css-instagram-clone/starter-code/images/home.png" alt="login"><p>Log in</p>
+        </button>
+      </div>
+      <div id="content">
+        <div id="text">
+          <h1>Capture and Share<br> 
+            the World's Moments</h1>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div id="download">
+          <img src="/Users/juliaramos/code/labs/week2/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="download-iphone">
+          <img src="/Users/juliaramos/code/labs/week2/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="download-android">
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
