--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,46 +4,52 @@
   <title>Instagram</title>
   <link rel="stylesheet" href="./css/main.css">
 </head>
-<body>
+<body class="background">
   <section class="section">
   
     <div>
       <img src="./images/phones.png" alt="phone image">
     </div>
     
-    <div>
+    <div class="right-side">
 
       <div class="button">
         <img src="./images/brand.png" alt="instagram logo">
-        <button type="button"><img src="./images/home.png" >Log in</button>
+        <div>
+          <button type="button"><img src="./images/home.png" >Log in</button>
+        </div>
     
       </div>
       <div class="background-div">
-        <h2>Capture and Share the World's Moments</h2>
-        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
-        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <h2>Capture and Share<br> the World's Moments</h2>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life 
+          with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and 
+          feel, then post to Instagram &mdash; it's that easy. You can even share 
+          to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
         <p>Oh yeah, did we mention it's free?</p>
 
       </div>
 
       <div class="icone-app">
-        <img src="./images/badge-android.png" alt="android">
         <img src="./images/badge-iphone.png" alt="iphone">
+        <img src="./images/badge-android.png" alt="android">
       </div>
 
     </div>
   
   </section>
-  <footer class="rodape">
-    <a href="">About Us</a>
-    <a href="">Support</a>
-    <a href="">Blog</a>
-    <a href="">Press</a>
-    <a href="">API</a>
-    <a href="">Jobs</a>
-    <a href="">Privacy</a>
-    <a href="">Terms</a>
-    &copy; 2014 Instagram
+
+  <footer class="footer">
+    <a href="#">About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+    <span>&copy; 2014 Instagrams</span>
 
 
   </footer>
