set relative path on images

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,15 +7,15 @@
 <body>
   <section id="index">
     <div id="image">
-      <img src="/Users/juliaramos/code/labs/week2/lab-css-instagram-clone/starter-code/images/phones.png" alt="iphone">
+      <img src="./images/phones.png" alt="iphone">
     </div>
     <div id="main">
       <div id="header">
         <div>
-          <img src="/Users/juliaramos/code/labs/week2/lab-css-instagram-clone/starter-code/images/brand.png" alt="instagram-logo">
+          <img src="./images/brand.png" alt="instagram-logo">
         </div>
         <button id="login">
-          <img src="/Users/juliaramos/code/labs/week2/lab-css-instagram-clone/starter-code/images/home.png" alt="login"><p>Log in</p>
+          <img src="./images/home.png" alt="login"><p>Log in</p>
         </button>
       </div>
       <div id="content">
@@ -27,8 +27,8 @@
           <p>Oh yeah, did we mention it's free?</p>
         </div>
         <div id="download">
-          <img src="/Users/juliaramos/code/labs/week2/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="download-iphone">
-          <img src="/Users/juliaramos/code/labs/week2/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="download-android">
+          <img src="./images/badge-iphone.png" alt="download-iphone">
+          <img src="./images/badge-android.png" alt="download-android">
         </div>
       </div>
     </div>
