--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+	<link rel="stylesheet" href="css/main.css"> 
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <head>
-  <title>Instagram</title>
+	<title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+	<div id="boxBlue"> </div> <!----RECUADRO AZUL---->
+	<div id="boxWhite"></div>
+	<div id="info">
+		<h1>Capture and Share the World's Moments</h1>
+			<p>
+				Instagram is a fast, beautiful and fun way to share your life with friends and family.<br> <br>
 
-  Capture and Share the World's Moments
+				Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br> <br>
+				Oh yeah, did we mention it's free?
+				<br>	
+			</p>
+	</div>
+<div>
+		<img id="botones" src="https://raw.githubusercontent.com/YerimMG/lab-css-instagram-clone/master/starter-code/images/badge-iphone.png">
+		<img id="botones" src="https://raw.githubusercontent.com/YerimMG/lab-css-instagram-clone/master/starter-code/images/badge-android.png">
+</div>
+<img id="cell" src="images/phones.png">
+<img id="insta" src="images/brand.png">
+<button type="Log in"><img id="home" src="images/home.png"><strong>Log in</strong></button>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<footer>
+	<nav>
+		<a href="ABOUT US">ABOUT US </a> 
+		<a href="SUPPORT">SUPPORT </a> 
+		<a href="BLOG">BLOG </a> 
+		<a href="PRESS">PRES </a>
+		<a href="API">API </a>
+		<a href="SUPPORT">JOBS </a>
+		<a href="BLOG">PRIVACY </a>
+		<a href="PRESS">TERMS </a>
+	</nav>
+</footer>
+	
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
