--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <header>
+    <div class="instalogo">
+    <img src="images/brand.png">
+    </div>
+    <div class="loginbutton">
+      <img src="images/home.png" alt="HomeIcon">
+    <a href="#">Log in</a>
+  </div>
+    </header>
+    <img class="phonesimg" src="images/phones.png" alt="Phones">
+    <div class="content">
+  <h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
+</p>
 
-  Download on the App Store
-  Get it on Google Play
+<div class="appbutton">  
+<img src="images/badge-iphone.png" alt="IconoIos">
+<img class="androidbutton" src="images/badge-android.png" alt="IconoAndroid">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+</div>
+</div>
+<footer>
+<div class="foot">
+  <a href="#">About Us</a>
+  <a href="#">Support</a>
+  <a href="#">Blog</a>
+  <a href="#">Press</a>
+  <a href="#">API</a>
+  <a href="#">Jobs</a>
+  <a href="#">Privacy</a>
+  <a href="#">Terms</a>
 
   &copy; 2014 Instagram
+</div>
+</footer>
+
 </body>
 </html>
