--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,38 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
+  <meta charset="UTF-8">
 </head>
 <body>
-  Instagram
+  <div class="flexbox"> 
+    <img src="images/phones.png" alt="phones picture"> 
+    <div class="text-div">
+      <img src="images/brand.png" alt="Instagram logo">
+      <a href="#"><img src="images/home.png" alt="home button">Log In</a>   
+      
+      <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+      <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      <img src="images/badge-iphone.png" alt="Download App Store">
+      <img src="images/badge-android.png" alt="Download Play Store">
+    </div>
+  </div> 
+  <div>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+    </ul>
+    <p>&copy; 2014 Instagram</p>
+  </div>
 </body>
 </html>
