primer proyecto DE

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
-<body>
-  Instagram
+<body img="images/bgtile.png">
 
-  Capture and Share the World's Moments
+<header>
+  <div>
+  <img src="images/phones.png" alt="imagen telefono">
+  </div>
+  <div class="encabezado">
+  <img src="images/brand.png"> <a href="#" class="casa"><img src="images/home.png" alt="inicio">Login In</a>
+    <div class="secctionUno">
+      <h2>Capture and Share the World's Moments</h2>
+      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and fun way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <img src="images/badge-iphone.png" alt="para iphone">
+      <img src="images/badge-android.png" alt="para andrid">
+    </div>
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+</header>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
+<footer>
+  <a href="#" class="pie">About Us</a>
+  <a href="#" class="pie">Support</a>
+  <a href="#" class="pie">Blog</a>
+  <a href="#" class="pie">Press</a>
+  <a href="#" class="pie">API</a>
+  <a href="#" class="pie">Jobs</a>
+  <a href="#" class="pie">Privacy</a>
+  <a href="#" class="pie">Terms</a>
   &copy; 2014 Instagram
+</footer>
+  
+
 </body>
 </html>
