--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
-  Instagram
+<body class="band">
 
-  Capture and Share the World's Moments
+    <header>
+    <div class="insta-logo">
+      <img src="images/brand.png" alt="brand logo"> 
+    </div>
+      <button class="inicio"><img src="images/home.png">Log in </button>
+    </header>
+    
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  
+  <div class="phones">
+  <div><img class="phones" src="images/phones.png" alt="phones"></div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="square">
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+    <h2>Capture and Share the World's Moments</h2>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  &copy; 2014 Instagram
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+    <p>Oh yeah, did we mention it's free?</p>
+
+  <div>
+    <button><img src="images/badge-iphone.png" alt="badge-iphone"> </button>
+    <button><img src="images/badge-android.png" alt="badge-iphone"></button>
+  </div>
+</div>
+</div>
+<footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">JOBS</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+    </ul>
+
+    <small>&copy; 2014 Instagram</small>
+
+  </footer>
 </body>
 </html>
