--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="./css/main.css">  
+
 <head>
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+<header>
+  <button class="login" type="button">Log in</button>
+  <img class="image-instagram" src=./images/brand.png>
+</header>
+ 
+  <img class="image-phones" src="./images/phones.png">
 
-  Capture and Share the World's Moments
+ <section class="parrafo">
+  <h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Oh yeah, did we mention it's free?</p>
+  
+  <div class="botones">
+<img src="./images/badge-iphone.png"> <img src="./images/badge-android.png">
+  </div> 
+</section> 
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+  <nav>
+  <ul class="top-links">
+  <li><a href="#"> About Us</a></li>
+  <li><a href="#"> Support</a></li>
+  <li><a href="#"> Blog</a></li>
+  <li><a href="#"> Press</a></li>
+  <li><a href="#"> API</a></li>
+  <li><a href="#"> Jobs</a></li>
+  <li><a href="#"> Privacy</a></li>
+  <li><a href="#"> Terms</a></li>
+  <li>&copy; 2014 Instagram</li>
+  </ul>
+  </nav>
+ 
 </body>
 </html>
