archivos instagram clone

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <meta charset="utf-8">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <title>Instagram</title>
+  </head>
+  <body>
+    <section class="inicio">
+        <div class="bloque-izq">
+        <img src="images/phones.png" alt="phone photo">
+      </div>
+      <div class="bloque-der">
+        <ul class="logo-btn">
+          <li><img src="images/brand.png" alt="Instagram logo" width="83%" height="83%"></li>
+          <li><div class="style-bton text-btn"><img class="home" src="images/home.png" alt="Home icon">Log in</div></li>
+        </ul>
+        <div class="inline">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="store">
+          <img class="apple" src="./images/badge-iphone.png" alt="App Store badge">
+          <img src="./images/badge-android.png" alt="Andorid badge">
+        </div>
+      </div>
+    </section>
+    <footer>
+      <ul class="links">
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Suport</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li class="copyright">  &copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </body>
 </html>
