--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
+    <header class="hero">
+      <div class="img-logo">
+        <img class="logo" src="images/brand.png" alt="instagram" />
+      </div>
+      <div class="button">
+        <button><img src="./images/home.png" alt="home" /> Log in</button>
+      </div>
+    </header>
+    <section>
+      <div class="phones">
+        <img src="images/phones.png" alt="phones" />
+      </div>
+      <div class="introduction-container">
+        <h2>Capture and Share</h2>
+        <h2>the World's Moments</h2>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+        <p>
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and
+          <strong>fun</strong> way to share your life with friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy. You can even
+          share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+        </p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="images-badges">
+          <img class="iphone" src="images/badge-iphone.png" alt="img-iphone" />
+          <img
+            class="android"
+            src="images/badge-android.png"
+            alt="img-android"
+          />
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="footer-container">
+        <ul class="footer-links">
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+        </ul>
+        <div class="copyright">&copy; 2014 Instagram</div>
+      </div>
+    </footer>
+  </body>
 </html>
