--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,68 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Instagram</title>
+  <meta name="description" content="Capture and share the world's moments.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="main-container">
 
-  Capture and Share the World's Moments
+    <div class="phone-image-container">
+      <img src="images/phones.png" alt="Two Smartphones" class="phone-img">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="right-container">
+      <div class="top-icons">
+        <img src="images/brand.png" alt="Instagram Logo" class="logo">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <button>
+          <img src="../starter-code/images/home.png" alt="signup button">
+          <a href="#">Log In</a>
+        </button>
 
-  Oh yeah, did we mention it's free?
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
+      <div class="main-text">
+        <h1>Capture and Share the World's Moments</h1>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+        </p>
 
-  &copy; 2014 Instagram
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+
+      <div class="bottom-icons">
+        <img src="images/badge-iphone.png" alt="Download on the App Store" class="img-main">
+        <img src="images/badge-android.png" alt="Get it on Google Play" class="img-main">
+      </div>
+    </div>
+  </div>
+
+
+  <footer>
+    <ul class="footer-links">
+      <li><a href="#">About us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">Api</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li class="copy">©2014 Instagram</li>
+    </ul>
+  </footer>
+
 </body>
+
 </html>
