--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+<link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+<section>
+  <div class="header"><div class="right-div flex">
+    <div>
+      <img src="images/brand.png" alt="brand-logo">
+    </div>
+    <div>
+      <button><img src="images/home.png" alt="home-logo">Log in</button>
+    </div>
+  </div>
+</div>
+</section>
 
-  Capture and Share the World's Moments
-
+<section><div class= "first-section white"><h2>Capture and Share the World's Moments</h2>
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+  it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
   Oh yeah, did we mention it's free?
+  <div class= "flex">
+    <div><img src="images/badge-iphone.png" alt="download-iphone"></div>
+  <div><img src="images/badge-android.png" alt="download-android"></div>
+</div></div>
+</section>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <div class="bar">
+  <ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+</ul>
+</div>
+  <p class= "uppercase white">&copy; 2014 Instagram</p></footer>
 </body>
 </html>
