--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+    <meta charset="utf-8">
+    <title>Instagram</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+    <img class = "phone" src="images/phones.png" alt="phones"> 
+   <img class = "logo" src="images/brand.png" alt="logo">
+    <a class="log" href="#">Log in</a>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class = "box bu">
+    <h1>Capture and Share the World's Moments</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p><Instagram is a fast, beautiful and fun way to share your life with friends and family. </p>
 
-  Oh yeah, did we mention it's free?
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
 
-  Download on the App Store
-  Get it on Google Play
+        <p>Oh yeah, did we mention it's free?</p>
+
+  </div>
+
+  <img class ="apple" src="images/badge-iphone.png" alt="download it in Apple Store">
+  <img class = "google" src = "images/badge-android.png" alt ="get it on Google Play">
 
   About Us
   Support
