--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -23,7 +23,7 @@
 
     <h2>Capture and Share the World's Moments</h2>
 
-    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
     <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
@@ -45,9 +45,10 @@
       <li><a href="#">JOBS</a></li>
       <li><a href="#">Privacy</a></li>
       <li><a href="#">Terms</a></li>
+      <li><small>&copy; 2014 Instagram</small></li>
     </ul>
 
-    <small>&copy; 2014 Instagram</small>
+    
 
   </footer>
 </body>
