--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="css/main.css">
 <head>
   <title>Instagram</title>
 </head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
+<body></body>
+  <body bgcolor="white">
+  <header>
+    <img src="/images/badge-iphone.png">
+<div>
+  <h1>
+    Capture and Share
+  </h1>
+  <h1>
+      the World's Moments
+  </h1>
+  <p>
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
@@ -16,16 +24,21 @@
 
   Download on the App Store
   Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
+  </p>
+</div>
+<dev>
+  <ul class="top-links">
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
   &copy; 2014 Instagram
+</ul>
+</dev>
+</header>
 </body>
 </html>
