--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <div class="outer-container">
+      <div class="phone-image">
+        <img src="../starter-code/images/phones.png" alt="phones" />
+      </div>
+      <div class="info">
+        <div class="instagram">
+          <img src="../starter-code/images/brand.png" alt="instagram" />
+       </div>
+        <div class="text">
+          <h3>Capture and Share the World's Moments</>
+          <p>
+           Instagram is a fast, beautiful and fun way to share your life with
+           friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+           world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </>
+        <div class="download">
+          Download on the App Store Get it on Google Play
+        </div>
+    </div>
+      <footer>
+        About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+      </footer>
+    </div>
+  </body>
 </html>
