--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="main">
 
-  Capture and Share the World's Moments
+    <div class="leftColumn">
+      <div class="img">
+        <img src="images/phones.png">
+      </div>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="rightColumn">
+      <div class="img">
+        <img src="images/brand.png">
+      </div>
+      <div class="img">
+        <p>Login</p>
+        <img src="images/home.png">
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="child-text">
+        <h1> Capture and Share the World's Moments</h1>
+        <p>
+          Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Oh yeah, did we mention it's free?
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Download on the App Store
-  Get it on Google Play
+          Oh yeah, did we mention it's free?
+        </p>
+      </div>
+    </div>
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+
+
+
+  <div class="appstore">
+    <div class="appstore-badge"> <img src="images/badge-iphone.png"></div>
+    <div class="appstore-badge"> <img src="images/badge-android.png"></div>
+
+  </div>
+  <nav class="nav">
+    <ul>
+      <li class="flex-item">About Us</li>
+      <li class="flex-item">Blog</li>
+      <li class="flex-item">Press</li>
+      <li class="flex-item">Press</li>
+      <li class="flex-item">Press</li>
+      <li class="flex-item">Press</li>
+      <li class="flex-item">Press</li>
+    </ul>
+  </nav>
 
   &copy; 2014 Instagram
 </body>
+
 </html>
