done with style

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="/starter-code/css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="bluebackground">
+    <div>
+      <img class="phones" src="/starter-code/images/phones.png" alt="smartphones">
+    </div>
+    <div class="rightcolumn">
+      <div class="header-rightcolumn">
+          <div>
+            <img src="/starter-code/images/brand.png" alt="logo">
+          </div>
+          <button>
+              <div>
+                  <img src="/starter-code/images/home.png" alt="home">
+                </div>
+          <h5>Log in</h5>
+          </button>
+      </div>
 
-  Capture and Share the World's Moments
+      <div class="whitetextbox">
+        <h1>Capture and Share <br>
+          the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <h2>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family. <br>
+          <br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br>
+          <br>
 
-  Oh yeah, did we mention it's free?
+          Oh yeah, did we mention it's free?
+        </h2>
+        <div class="appstore">
+          <div>
+            <img class="badge-iphone" src="/starter-code/images/badge-iphone.png" alt="Download on the App Store">
+          </div>
+          <div>
+            <img class="badge-android" src="/starter-code/images/badge-android.png" alt="Get it on Google Play">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
+  <footer>
+    <h3>About Us</h3>
+    <h3>Support</h3>
+    <h3>Blog</h3>
+    <h3>Press</h3>
+    <h3>API</h3>
+    <h3>Jobs</h3>
+    <h3>Privacy</h3>
+    <h3>Terms</h3>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <h4>
+      &copy; 2014 Instagram
+    </h4>
 
-  &copy; 2014 Instagram
+  </footer>
+
 </body>
+
 </html>
