--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <link rel="stylesheet" href="css/main.css" />
+    <title>Instagram</title>
+  </head>
+  <body>
+    <div class="largeImage">
+      <img src="images/phones.png" />
+    </div>
 
-  Capture and Share the World's Moments
+    <div class="rightSide">
+      <h1 class="topLogo">
+        <img src="images/brand.png" />
+        <button type="button">
+          <img src="images/home.png" class="home" />Log in
+        </button>
+      </h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="bottom">
+        <h2 class="subTitle">Capture and Share the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <div class="text">
+          Instagram is a <b>fast, beautiful</b> and fun way to share your life
+          with friends and family. <br />Take a picture or video, choose a
+          filter to transform its look and feel, then post to Instagram &mdash;
+          it's that easy. You can even share to Facebook, Twitter, Tumblr and
+          more. It's a new way to see the world. <br />Oh yeah, did we mention
+          it's free?
+        </div>
 
-  Oh yeah, did we mention it's free?
+        <div class="download">
+          <img src="images/badge-android.png" />
+          <img src="images/badge-iphone.png" />
+        </div>
+      </div>
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  </body>
 </html>
