--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -39,16 +39,13 @@
     </div>
   </div>
 
-
-
-
   <div class="appstore">
     <div class="appstore-badge"> <img src="images/badge-iphone.png"></div>
     <div class="appstore-badge"> <img src="images/badge-android.png"></div>
 
   </div>
-  <nav class="nav">
-    <ul>
+  <div class="nav">
+    <ul class="nav">
       <li class="flex-item">About Us</li>
       <li class="flex-item">Blog</li>
       <li class="flex-item">Press</li>
@@ -57,9 +54,12 @@
       <li class="flex-item">Press</li>
       <li class="flex-item">Press</li>
     </ul>
-  </nav>
 
-  &copy; 2014 Instagram
+    <div>
+      <p>2014 Instagram</p>
+    </div>
+  </div>
+
 </body>
 
 </html>
