--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css" media="screen" />
+  </head>
+  <body>
+    <div class="centerStuff">
+      <div class="leftColumn">
+        <img src="./images/phones.png" alt="" />
+      </div>
+      <div class="rightColumn">
+        <div class="logIn">
+          <div><img src="images/brand.png" /></div>
+          <div>
+            <button><img src="images/home.png" />Log In</button>
+          </div>
+        </div>
+        <div class="textBlock">
+          Capture and Share the World's Moments Instagram is a fast, beautiful
+          and fun way to share your life with friends and family. <br />
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy.<br />
+          You can even share to Facebook, Twitter, Tumblr and more.<br />
+          It's a new way to see the world. <br />Oh yeah, did we mention it's
+          free? <br />Download on the App Store Get it on Google Play
+        </div>
+        <div class="images">
+          <div><img src="/images/badge-android.png" /></div>
+          <div><img src="/images/badge-iphone.png" /></div>
+        </div>
+      </div>
+    </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+    <nav>
+      About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+    </nav>
+  </body>
 </html>
