--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <div class="main-container">
+      <div class="container-left">
+        <img src="../starter-code/images/phones.png" />
+      </div>
+      <div class="container-right">
+        <img src="../starter-code/images/brand.png" />
+        <button>
+          <img src="images/home.png" />
+        </button>
+      </div>
+      <div>
+        <div>
+          <h3>Instagram Capture and Share the World's Moments</h3>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with
+            friends and family. Take a picture or video, choose a filter to
+            transform its look and feel, then post to Instagram &mdash; it's
+            that easy. You can even share to Facebook, Twitter, Tumblr and more.
+            It's a new way to see the world. Oh yeah, did we mention it's free?
+            Download on the App Store Get it on Google Play
+          </p>
+        </div>
+        <div>
+          <img src="images/badge-android.png" />
+          <img src="images/badge-iphone.png" />
+        </div>
+      </div>
+      <div></div>
+    </div>
+    <div class="footer">
+      <a href="">About us</a>
+      <a href="">Support</a>
+      <a href="">Blog</a>
+      <a href="">Press</a>
+      <a href="">API</a>
+      <a href="">Jobs</a>
+      <a href="">Privacy</a>
+      <a href="">Terms</a>
+      <a href="">&copy; 2014 Instagram</a>
+    </div>
+  </body>
 </html>
