work in progress

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <link rel="stylesheet" href="./CSS/main.css" />
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+    <title>Instagram</title>
+  </head>
+  <body>
+<main>
+  <div class="IMG"><img src="/Users/chanty/Desktop/lab-CSS-instagram/lab-css-instagram-clone/starter-code/images/phones.png" alt="">
+  </div>
+      <div class="content">
+        Instagram Capture and Share the World's Moments Instagram is a fast,
+        beautiful and fun way to share your life with friends and family. Take a
+        picture or video, choose a filter to transform its look and feel, then
+        post to Instagram &mdash; it's that easy. You can even share to
+        Facebook, Twitter, Tumblr and more. It's a new way to see the world. Oh
+        yeah, did we mention it's free? Download on the App Store Get it on
+        Google Play
+      </div>
+      <div class="images"></div>
+      <div class="text"></div>
+    </div>
+    </main>
+    <div class="footer">
+        <li class="AboutUS" href="">Support</li>
+        <li class="AboutUS" href="">Blog</li>
+        <li class="AboutUS" href="">Press</li>
+        <li class="AboutUS" href="">API</li>
+        <li class="AboutUS" href="">Jobs</li>
+        <li class="AboutUS" href="">Privacy</li>
+        <li class="AboutUS" href="">Terms</li>
+        <li class="AboutUS">&copy; 2014 Instagram</li>
+    </div>
+  </body>
 </html>
