--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,56 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="center-container">
+      <div id="iphone-image">
+        <img src="../starter-code/images/phones.png" alt="Phones">
+      </div>
+          <div id="content-block">
+            <div id="instagram-logo-log-in">
+              <div id="instagram-logo">
+                  <img src="../starter-code/images/brand.png" alt="Phones">
+              </div>
+              <div id="log-in-logo">
+                  <button type="button" class="log-in">Log In</button>
+              </div>
+            </div>
+              <div id="text-block">
 
-  Capture and Share the World's Moments
+                <div id="headline">Capture and Share the World's Moments</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+                Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+                Oh yeah, did we mention it's free?
+              </div>
+              <div id="apple-google-logos">
+                  <img src="../starter-code/images/badge-android.png" alt="Phones">
+                  <img id="apple-logo" src="../starter-code/images/badge-iphone.png" alt="Phones">
+              </div>
+          </div>
+                
+          </div>
+  </div>
+  <div id="footer">
 
-  Download on the App Store
-  Get it on Google Play
+      <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>&copy; 2014 Instagram</li>
+      </ul>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+</div> 
+      
+  
 </body>
 </html>
