--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,35 +5,66 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <div class="outer-container">
-      <div class="phone-image">
-        <img src="../starter-code/images/phones.png" alt="phones" />
-      </div>
-      <div class="info">
-        <div class="instagram">
-          <img src="../starter-code/images/brand.png" alt="instagram" />
-       </div>
-        <div class="text">
-          <h3>Capture and Share the World's Moments</>
-          <p>
-           Instagram is a fast, beautiful and fun way to share your life with
-           friends and family.
-          </p>
-          <p>
-            Take a picture or video, choose a filter to transform its look and
-            feel, then post to Instagram &mdash; it's that easy. You can even
-            share to Facebook, Twitter, Tumblr and more. It's a new way to see the
-           world.
-          </p>
-          <p>Oh yeah, did we mention it's free?</p>
-        </>
-        <div class="download">
-          Download on the App Store Get it on Google Play
+    <div class="phone-image">
+      <img src="../starter-code/images/phones.png" alt="phones" />
+    </div>
+    <div class="info-box"">
+    <div class="header">
+      <img src="../starter-code/images/brand.png" alt="instagram logo" />
+      <button>
+        <div>
+          <img src="../starter-code/images/home.png" alt="login" />
         </div>
+        <h5>Log in</h5>
+      </button>
     </div>
-      <footer>
+    <div class="white-box">
+      <div class="text">
+        <h1>
+          Capture and Share <br />
+          the World's Moments
+        </h1>
+        <p>
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and
+          <strong>fun</strong> way to share your life with friends and
+          family.<br />
+          <br />
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy. You can even
+          share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world. <br />
+          <br />
+          Oh yeah, did we mention it's free?
+        </p>
+      </div>
+    </div>
+    <div class="downloads">
+      <div class="iphone">
+        <img src="../starter-code/images/badge-iphone.png" alt="iphone badge" />
+      </div>
+      <div class="android">
+        <img
+          src="../starter-code/images/badge-android.png"
+          alt="android badge"
+        />
+      </div>
+    </div>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</>
+        <li>Terms</li>
+      </ul>
+  
+    </footer>
+
+    <!-- <footer>
         About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
-      </footer>
-    </div>
+      </footer> -->
   </body>
 </html>
