Saturday Task, Instagram Copy with Flexbox, finished 08th July, still buggy by mobile view in chrome

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <main>
+    <div class="content">
+      <img class="img" src="images/phones.png" alt="phoneScreens">
+      <div class="text">
+        <div class="headline">
+          <img src="images/brand.png">
+          <div class="button">
+            <img src="images/home.png">
+            <p><b>Log In</b></p>
+          </div>
+        </div>
+        <div class="frame">
+          <h1>Capture and Share<br>the World's Moments</h1>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life<br>with friends and
+            family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+            it's
+            that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="appStore">
+            <img src="images/badge-iphone.png" alt="AppStoreLogo">
+            <img src="images/badge-android.png" alt="PlayStoreLogo"></div>
+        </div>
+      </div>
+    </div>
+  </main>
+  <ul class="footer">
+    <li class="listElement" href="">About Us</li>
+    <li class="listElement" href="">Support</li>
+    <li class="listElement" href="">Blog</li>
+    <li class="listElement" href="">Press</li>
+    <li class="listElement" href="">API</li>
+    <li class="listElement" href="">Jobs</li>
+    <li class="listElement" href="">Privacy</li>
+    <li class="listElement" href="">Terms</li>
+    <li class="listElementExtra">&copy;&nbsp;2014&nbsp;Instagram</li>
+  </ul>
 </body>
+
 </html>
