--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -33,7 +33,10 @@
     </div>
 
     <nav>
-      About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+      <div>
+        About Us Support Blog Press API Jobs Privacy Terms &copy;
+      </div>
+      <div>2014 Instagram</div>
     </nav>
   </body>
 </html>
