--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,8 +11,8 @@
       </div>
       <div class="rightColumn">
         <div class="logIn">
-          <div><img src="images/brand.png" /></div>
-          <div>
+          <div class="instagramLogo"><img src="images/brand.png" /></div>
+          <div class="logInButton">
             <button><img src="images/home.png" />Log In</button>
           </div>
         </div>
@@ -33,10 +33,10 @@
     </div>
 
     <nav>
-      <div>
-        About Us Support Blog Press API Jobs Privacy Terms &copy;
+      <div class="blueText">
+        About Us Support Blog Press API Jobs Privacy Terms
       </div>
-      <div>2014 Instagram</div>
+      <div>&copy; 2014 Instagram</div>
     </nav>
   </body>
 </html>
