--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,130 +7,60 @@
 </head>
 
 <body>
-  <section class="up">
-    <div class="header">
-      <img src="./images/phones.png">
-      <div class="container-description">
+  <div class="container">
+    <div class="main">
+
+      <div class="main-left">
+        <img src="images/phones.png">
+      </div>
+
+      <div class="main-right">
+
         <div class="header-icons">
-          <div class="mainlogo"><img src="images/brand.png" /></div>
-          <div class="login"><img src="images/home.png" /></div>
+          <img src="images/brand.png" class="brand" alt="brand logo">
+          <div><button type="login-button">
+              <img src="images/home.png" class="home" alt="home-icon">
+              Login
+            </button></div>
         </div>
 
-        <div class="header-text">
-          <h1>Capture and Share the World's Moments</h1>
-          <p>
-            Instagram is a <span>fast, beautiful</span> and
-            <span>fun</span> way to share your life<br />
-            with friends and family.<br />
-            <br />
-            Take a picture or video, choose a filter to transform its look<br />
-            and feel, then post to Instagram &mdash; it's that easy. You
-            can<br />
-            even share to Facebook, Twitter, Tumblr and more. It's a <br />
-          </p>
+        <div class="main-text">
+          <h1>Capture and Share <br> the World's Moments</h1>
+          <p>Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life<br>
+            with friends and family.<br>
+            <br>
+            Take a picture or video, choose a filter to transform its look<br>
+            and feel, then post to Instagram &mdash; it's that easy. You can<br>
+            even share to Facebook, Twitter, Tumblr and more. It's a <br>
+            new way to see the world.</p>
+
+          <p>Oh yeah, did we mention it's free?</p>
         </div>
+
         <div class="appstore-icons">
-          <div class="iphonelogo"><img src="images/badge-iphone.png" /></div>
-          <div class="androidlogo">
-            <img src="images/badge-android.png">
-          </div>
+          <img src="images/badge-iphone.png" class="applestore" alt="iphone-icon">
+          <img src="images/badge-android.png" class="google-play-store" alt="google-play-icon">
         </div>
       </div>
+
+
     </div>
-  </section>
 
+    <footer class="footer-row">
+      <ul class="footer-items">
+        <li class="menu">About Us</li>
+        <li class="menu">Support</li>
+        <li class="menu">Blog</li>
+        <li class="menu">Press</li>
+        <li class="menu">API</li>
+        <li class="menu">Jobs</li>
+        <li class="menu">Privacy</li>
+        <li class="menu">Terms</li>
+        <li class="copywrite">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
 
-  <footer class="footer-row">
-    <ul class="footer-items">
-      <li class="menu">About Us</li>
-      <li class="menu">Support</li>
-      <li class="menu">Blog</li>
-      <li class="menu">Press</li>
-      <li class="menu">API</li>
-      <li class="menu">Jobs</li>
-      <li class="menu">Privacy</li>
-      <li class="menu">Terms</li>
-      <li class="copywrite">&copy; 2014 Instagram</li>
-    </ul>
-  </footer>
-
-
-
-</body>
-
-</html>
-
-
-
-
-
-
-
-
-
-
-
-<!--- old code 
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <title>Instagram</title>
-  <link rel="stylesheet" type="text/css" href="css/main.css">
-</head>
-
-<body>
-
-  
-  <header class="header-row">
-    <div class="header-icons">
-      <div>
-        <img src="images/brand.png" alt="brand logo">
-      </div>
-      <div class="login-button">
-        <div><img src="images/home.png" alt="login"></div>
-        <p>Login</p>
-      </div>
-    </div>
-  </header>
-
-  
-  <div class="main-row">
-    <div class="description">
-      <h1>Capture and Share the World's Moments</h1>
-      <p>Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life<br>
-        with friends and family.<br>
-        <br>
-        Take a picture or video, choose a filter to transform its look<br>
-        and feel, then post to Instagram &mdash; it's that easy. You can<br>
-        even share to Facebook, Twitter, Tumblr and more. It's a <br>
-        new way to see the world.</p>
-
-      <p>Oh yeah, did we mention it's free?</p>
-      <img src="images/badge-iphone.png" class="iphone-badge" alt="apple store button">
-      <img src="images/badge-android.png" alt="google play store button">
-    </div>
-    <div>
-      <img src="images/phones.png" alt="phones">
-    </div>
   </div>
-
-  
-  <footer class="footer-row">
-    <ul class="footer-items">
-      <li class="menu">About Us</li>
-      <li class="menu">Support</li>
-      <li class="menu">Blog</li>
-      <li class="menu">Press</li>
-      <li class="menu">API</li>
-      <li class="menu">Jobs</li>
-      <li class="menu">Privacy</li>
-      <li class="menu">Terms</li>
-      <li class="copywrite">&copy; 2014 Instagram</li>
-    </ul>
-  </footer>
 </body>
 
 </html>
-
--->
