--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <title>Instagram</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <section>
+      <div class="cellphone">
+        <img src="images/phones.png" alt="Download Instagram app" />
+      </div>
+      <div class="container">
+        <div class="instaLogin">
+          <img src="images/brand.png" alt="Instagram" />
+          <button><span class="homeIcon"></span>Log in</button>
+        </div>
+        <div class="description">
+          <h3>Capture and Share the World's Moments</h3>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with
+            friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="container">
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li><span class="copyrigth">&copy; 2014 Instagram</span></li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
