Update index file
Added background and login button

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,12 +13,13 @@
 			<img src="images/phones.png" alt:"Phones">
 		</div>
 		<div class="text-container">
-			<div>
+			<div class="brand">
 				<img src="images/brand.png" alt="Instagram app">
 			</div>
-			<div>
-				<img src="images/home.png" alt="Log in button">
+			<div class="login">
+				<a href=# class="login-btn">Login</a>
 			</div>
+			<div id="clear"></div>
 			<div class="information">
 				<h2>Capture and Share the World's Moments</h2>
 				<p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
