--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,6 +4,8 @@
     <title>Instagram</title>
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css" />
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
   </head>
   <body>
     <section>
@@ -14,7 +16,7 @@
         <div class="mainInfo">
           <div class="instaLogin">
             <img src="images/brand.png" alt="Instagram" />
-            <button><span class="homeIcon"></span>Log in</button>
+            <button><a href="#"><span class="homeIcon"></span>Log in</a></button>
           </div>
           <div class="description">
             <h3>Capture and Share the World's Moments</h3>
