Updated index and styles files

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,22 +13,25 @@
 			<img src="images/phones.png" alt:"Phones">
 		</div>
 		<div class="text-container">
-			<div class="brand">
-				<img src="images/brand.png" alt="Instagram app">
-			</div>
-			<div class="login">
-				<a href=# class="login-btn">Login</a>
-			</div>
-			<div id="clear"></div>
-			<div class="information">
-				<h2>Capture and Share the World's Moments</h2>
-				<p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
-				<p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-				<p>Oh yeah, did we mention it's free?</p>
-				<div class="app-download">
-					<img src="#" alt="Download on the App Store">
-					<img src="#" alt="Get it on Google Play">
+			<div class="head">
+				<div class="brand">
+					<img src="images/brand.png" alt="Instagram app">
 				</div>
+				<div class="login">
+					<a href=#>Login</a>
+				</div>
+			</div>
+			<div class="information">
+				<div class="info-container">
+					<h2>Capture and Share <br>the World's Moments</h2>
+					<p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+					<p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+					<p>Oh yeah, did we mention it's free?</p>
+				</div>
+			</div>
+			<div class="app-download">
+				<img src="images/badge-iphone.png" alt="Download on the App Store">
+				<img src="images/badge-android.png" alt="Get it on Google Play">
 			</div>
 		</div>
 	</div>
